<?xml version="1.0"?>
<package format="2">
  <name>static_tf_republisher</name>
  <version>0.0.1</version>
  <description>The static_tf_republisher package</description>

  <author email="shinjo@jsk.imi.i.u-tokyo.ac.jp">sktometometo</author>
  <maintainer email="shinjo@jsk.imi.i.u-tokyo.ac.jp">sktometometo</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>rosbag</exec_depend>

  <export>
  </export>
</package>
